# RustyScanner

./: .cidr  README.md  install.sh  scan
Scan/: Cargo.toml
Scan/src/: main.rs
scanBETA/: Cargo.toml
scanBETA/src/: main.rs
scanold-top/src/: main copy.rs.old
withdomain/: Cargo.toml
withdomain/src/: main.rs
